Still some issues with page number buttons

--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,41 +1,41 @@
-<section class="pagination">
-  <div>
+<!-- <section class="pagination">
+  <div class="previous-div">
     <button id="previous" class="pagination__button--arrow">
       <img src="./images/icons-pagination/arrow-left.svg" />
     </button>
   </div>
-  <div><button id="first" class="pagination__button--hidden-on-mobile" data-page="1"></button></div>
-  <div><button id="dot" class="pagination__button--hidden-on-mobile" data-page="">...</button></div>
-  <div><button id="minus2" class="pagination__button" data-page=""></button></div>
-  <div><button id="minus1" class="pagination__button" data-page=""></button></div>
-  <div><button id="current" class="pagination__button--active" data-page=""></button></div>
-  <div><button id="plus1" class="pagination__button" data-page=""></button></div>
-  <div><button id="plus2" class="pagination__button" data-page=""></button></div>
-  <div>
+  <div class="first-div"><button id="first" class="pagination__button--hidden-on-mobile" data-page="1"></button></div>
+  <div class="dot-div"><button id="dot" class="pagination__button--hidden-on-mobile" data-page="">...</button></div>
+  <div class=""><button id="minus2" class="pagination__button" data-page=""></button></div>
+  <div class=""><button id="minus1" class="pagination__button" data-page=""></button></div>
+  <div class=""><button id="current" class="pagination__button--active" data-page=""></button></div>
+  <div class=""><button id="plus1" class="pagination__button" data-page=""></button></div>
+  <div class=""><button id="plus2" class="pagination__button" data-page=""></button></div>
+  <div class="">
     <button id="dot2" class="pagination__button--hidden-on-mobile" data-page="">...</button>
   </div>
-  <div><button id="last" class="pagination__button--hidden-on-mobile" data-page=""></button></div>
-  <div>
+  <div class=""><button id="last" class="pagination__button--hidden-on-mobile" data-page=""></button></div>
+  <div class="">
     <button id="next" class="pagination__button--arrow">
       <img src="./images/icons-pagination/arrow-right.svg" />
     </button>
   </div>
-</section>
+</section> -->
 
-<!-- <section class="pagination">
+<section class="pagination">
   <button id="previous" class="pagination__button--arrow">
     <img src="./images/icons-pagination/arrow-left.svg" />
   </button>
   <button id="first" class="pagination__button--hidden-on-mobile" data-page="1"></button>
-  <button id="dot" class="pagination__button--hidden-on-mobile" data-page="">...</button>
+  <div id="dot" class="pagination__button--hidden-on-mobile" data-page="">...</div>
   <button id="minus2" class="pagination__button" data-page=""></button>
   <button id="minus1" class="pagination__button" data-page=""></button>
   <button id="current" class="pagination__button--active" data-page=""></button>
   <button id="plus1" class="pagination__button" data-page=""></button>
   <button id="plus2" class="pagination__button" data-page=""></button>
-  <button id="dot2" class="pagination__button--hidden-on-mobile" data-page="">...</button>
+  <div id="dot2" class="pagination__button--hidden-on-mobile" data-page="">...</div>
   <button id="last" class="pagination__button--hidden-on-mobile" data-page=""></button>
   <button id="next" class="pagination__button--arrow">
     <img src="./images/icons-pagination/arrow-right.svg" />
   </button>
-</section> -->
+</section>
