--- a/src/sass/partials/_typography.scss
+++ b/src/sass/partials/_typography.scss
@@ -1,17 +1,21 @@
 $defaultFontStyle: 'Roboto', sans-serif;
-$smallFontSize: 0.8rem;
-$defaultFontSize: 0.9rem;
-$mediumFontSize: 1.2rem;
-$largeFontSize: 1.4rem;
-$headFontSize: 1.9rem;
-$smallLineHeight: 0.9rem;
+$smallFontSize: 0.75rem;
+$defaultFontSize: 0.875rem;
+$mediumFontSize: 1.25rem;
+$largeFontSize: 1.375rem;
+$headFontSize: 1.875rem;
+$smallLineHeight: 0.875rem;
 $defaultLineHeight: 1rem;
-$mediumLineHeight: 1.2rem;
+$mediumLineHeight: 1.25rem;
+$mediumFontSizeModal: 1.4375rem;
 $largeLineHeight: 1.5rem;
-$headLineHeight: 2.2rem;
-$defaultColor: rgba(255, 255, 255, 1);
-$titleColor: rgba(0, 0, 0, 1);
-$descritiopnColor: rgba(255, 107, 8, 1);
-$propertyColor: rgba(140, 140, 140, 1);
+$headLineHeight: 2.1875rem;
+$defaultColor: #ffffff;
+$titleColor: #000000;
+$descritiopnColor: #ff6b08;
+$propertyColor: #8c8c8c;
+$textFooterColor: #545454;
+$bgFoterColor:  #F7F7F7;
 $accentColor: rgba(255, 0, 27, 1);
-$transparentColor: rgba(0, 0, 0, 0);
+$transparentColor: hsla(0, 0%, 0%, 0);
+$modalPrimaryColor: #ff6b01;
