--- a/src/sass/partials/_common.scss
+++ b/src/sass/partials/_common.scss
@@ -18,9 +18,12 @@ ul {
 .container {
   width: 100%;
   margin: 0 auto;
-  padding: 0 20px;
   min-width: 320px;
+  padding: 0 20px;
   @include tablet {
-    padding: 0px 32px;
+    padding: 0 32px;
+  }
+  @include desktop {
+    padding: 0 32px;
   }
 }
