--- a/src/sass/partials/_pagination.scss
+++ b/src/sass/partials/_pagination.scss
@@ -4,6 +4,9 @@
   justify-content: center;
   align-items: center;
   gap: 16px;
+  @include tablet {
+  margin-bottom: 40px; 
+  }
   &__button {
     padding: 0;
     background-color: inherit;
@@ -14,9 +17,9 @@
     font-weight: 700;
 
     &--active {
-      background: #ff6b08;
+      background: $descritiopnColor;
       padding: 0;
-      color: white;
+      color: $defaultColor;
       width: 40px;
       height: 40px;
       border-radius: 5px;
@@ -36,7 +39,7 @@
     }
     &--hidden-on-mobile {
       display: none;
-      @media screen and (min-width: 768px) {
+      @include tablet {
         display: flex;
         padding: 0;
         background-color: inherit;
@@ -49,8 +52,4 @@
     }
   }
 }
-@media screen and (max-width: 767px) {
-  .pagination {
-    margin-bottom: 40px;
-  }
-}
+
