--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -1,5 +1,5 @@
 <header class="header header--library">
-  <div class="header__container header__container--margin">
+  <div class="header__container">
     <a class="header__logo" href="/src/index.html">
       <svg class="header__icon" width="24" height="24">
         <use href="/src/images/icons.svg#icon-movie"></use>
@@ -7,53 +7,68 @@
       <p class="header__title">Filmoteka</p>
     </a>
     <ul class="header__list">
-      <div class="" id="login-div">
-          <button class="login" id="log-btn">Log in</button><br />
-          <input
-            type="email"
-            id="login-email"
-            name="login-email"
-            placeholder="Email"
-            required
-          /><br />
-          <input
-            type="password"
-            id="login-password"
-            name="login-password"
-            placeholder="Password"
-            required
-          />
-        </div>
-      </li>
-      <li>
-        <div id="register-div">
-          <button class="Register" id="register-btn">Register</button><br />
-          <input
-            type="email"
-            id="register-email"
-            name="register-email"
-            placeholder="Email"
-            required
-          /><br />
-          <input
-            type="password"
-            id="register-password"
-            name="register-password"
-            placeholder="Password"
-            required
-          />
-        </div>
-      </li>
-      <li class="header__item">
-        <a class="header__link" href="/src/index.html">Home</a>
-      </li>
-      <li class="header__item">
-        <a class="header__link header__link--active" href="/src/library.html">My Library</a>
-      </li>
-    </ul>
+        <li class="header__item ">
+          <p class="header__link header__log">log in</p>
+        </li>
+        <li class="header__item">
+          <a class="header__link" href="/src/index.html">home</a>
+        </li>
+        <li class="header__item">
+          <a class="header__link header__link--active" href="/src/library.html">my Library</a>
+        </li>
+      </ul>
   </div>
-  <div class="button">
-    <button type="button" class="button__status">watched</button>
-    <button type="button" class="button__status">queue</button>
+  <form class="login__form" id="login-form">
+    <input
+    class="login__input"
+      type="email"
+      id="login-email"
+      name="login-email"
+      placeholder="Email"
+      required
+    />
+    <input
+    class="login__input"
+      type="password"
+      id="login-password"
+      name="login-password"
+      placeholder="Password"
+      required
+    />
+    <div class = "log__btns">
+      <button class="log__btn" id="log-btn">Log in</button>
+      <button class="log__btn" id="register-btn">Register</button>
+      </div>
+  </form>
+  <script>
+    const paragraph = document.querySelector(".header__log");
+    const loginForm = document.querySelector(".login__form")
+    paragraph.addEventListener('click', function() {
+    loginForm.style.visibility = 'visible';
+    });
+  </script>
+  
+  <!-- <div class="" id="login-div">  
+    <button class="login" id="log-btn">Log in</button>
+    <button class="register" id="register-btn">Register</button>
+    <br />
+    <input
+      type="email"
+      id="login-email"
+      name="login-email"
+      placeholder="Email"
+      required
+    /><br />
+    <input
+      type="password"
+      id="login-password"
+      name="login-password"
+      placeholder="Password"
+      required
+    />
+</div> -->
+  <div class="library-button">
+    <button type="button" class="library-button__status">watched</button>
+    <button type="button" class="library-button__status">queue</button>
   </div>
 </header>
