to uppercase fixes

--- a/src/partials/container_movies.html
+++ b/src/partials/container_movies.html
@@ -1,8 +1,8 @@
 <div class="container-movies">
-    <div class="movie-list">
+  <div class="movie-list">
+    <!-- <include src="./partials/movie_card.html"></include>
         <include src="./partials/movie_card.html"></include>
         <include src="./partials/movie_card.html"></include>
-        <include src="./partials/movie_card.html"></include>
-        <include src="./partials/movie_card.html"></include>
-    </div>
+        <include src="./partials/movie_card.html"></include> -->
+  </div>
 </div>
