--- a/src/sass/partials/_loader.scss
+++ b/src/sass/partials/_loader.scss
@@ -4,59 +4,91 @@
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #545454;
+  background-color: #54545490;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
+$colors: hsla(337, 84, 48, 0.75) hsla(160, 50, 48, 0.75) hsla(190, 61, 65, 0.75)
+  hsla(41, 82, 52, 0.75);
+$size: 2.5em;
+$thickness: 0.5em;
+
+// Calculated variables.
+$lat: ($size - $thickness) / 2;
+$offset: $lat - $thickness;
+
 .loader {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
   position: relative;
-  border: 4px solid #fff;
-  animation: loader 2s infinite ease;
-}
-.loader-inner {
-  vertical-align: top;
-  display: inline-block;
-  width: 100%;
-  background-color: #fff;
-  animation: loader-inner 2s infinite ease-in;
-}
+  width: $size;
+  height: $size;
+  transform: rotate(165deg);
 
-@keyframes loader {
-  0% {
-    transform: rotate(0deg);
+  &:before,
+  &:after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: block;
+    width: $thickness;
+    height: $thickness;
+    border-radius: $thickness / 2;
+    transform: translate(-50%, -50%);
   }
-  25% {
-    transform: rotate(180deg);
+
+  &:before {
+    animation: before 2s infinite;
   }
-  50% {
-    transform: rotate(180deg);
-  }
-  75% {
-    transform: rotate(360deg);
-  }
-  100% {
-    transform: rotate(360deg);
+
+  &:after {
+    animation: after 2s infinite;
   }
 }
 
-@keyframes loader-inner {
+@keyframes before {
   0% {
-    height: 0%;
+    width: $thickness;
+    box-shadow: $lat (-$offset) nth($colors, 1), (-$lat) $offset nth($colors, 3);
   }
-  25% {
-    height: 0%;
+  35% {
+    width: $size;
+    box-shadow: 0 (-$offset) nth($colors, 1), 0 $offset nth($colors, 3);
   }
-  50% {
-    height: 100%;
-  }
-  75% {
-    height: 100%;
+  70% {
+    width: $thickness;
+    box-shadow: (-$lat) (-$offset) nth($colors, 1), $lat $offset nth($colors, 3);
   }
   100% {
-    height: 0%;
+    box-shadow: $lat (-$offset) nth($colors, 1), (-$lat) $offset nth($colors, 3);
   }
+}
+
+@keyframes after {
+  0% {
+    height: $thickness;
+    box-shadow: $offset $lat nth($colors, 2), (-$offset) (-$lat) nth($colors, 4);
+  }
+  35% {
+    height: $size;
+    box-shadow: $offset 0 nth($colors, 2), (-$offset) 0 nth($colors, 4);
+  }
+  70% {
+    height: $thickness;
+    box-shadow: $offset (-$lat) nth($colors, 2), (-$offset) $lat nth($colors, 4);
+  }
+  100% {
+    box-shadow: $offset $lat nth($colors, 2), (-$offset) (-$lat) nth($colors, 4);
+  }
+}
+
+/**
+ * Attempt to center the whole thing!
+ */
+
+.loader {
+  position: absolute;
+  top: calc(50% - #{$size / 2});
+  left: calc(50% - #{$size / 2});
 }
