--- a/src/partials/loader.html
+++ b/src/partials/loader.html
@@ -1,3 +1,3 @@
-<div class="loader-wrapper">
-  <span class="loader"><span class="loader-inner"></span></span>
+<div id="preloader" class="loader-wrapper">
+  <div class="loader"></div>
 </div>
