--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -8,34 +8,15 @@
     </a>
     <ul class="header__list">
       <li>
-        <div class="" id="login-div">
-          <button class="login" id="log-btn">Log in</button><br />
-          <input
-            type="email"
-            id="login-email"
-            name="login-email"
-            placeholder="Email"
-            required
-          /><br />
-          <input
-            type="password"
-            id="login-password"
-            name="login-password"
-            placeholder="Password"
-            required
-          />
-        </div>
-      </li>
-      <li>
-        <div id="register-div">
-          <button class="Register" id="register-btn">Register</button><br />
+        <div class=" "id="register-div">
+          <button class="login__btn" id="register-btn">Register</button><br />
           <input
             type="email"
             id="register-email"
             name="register-email"
             placeholder="Email"
             required
-          /><br />
+          />
           <input
             type="password"
             id="register-password"
@@ -45,9 +26,26 @@
           />
         </div>
       </li>
-      <!-- <li id="result-box">
-        <h3 id="result"></h3>
-      </li> -->
+      <li>
+        <div class="" id="login-div">
+          <button class="login__btn" id="log-btn">Log in</button><br />
+          <input
+            type="email"
+            id="login-email"
+            name="login-email"
+            placeholder="Email"
+            required
+          />
+          <input
+            type="password"
+            id="login-password"
+            name="login-password"
+            placeholder="Password"
+            required
+          />
+        </div>
+      </li>
+  
       <li class="header__item">
         <a class="header__link header__link--active" href="/src/index.html"> Home </a>
       </li>
