--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -7,8 +7,11 @@
       <p class="header__title">Filmoteka</p>
     </a>
     <ul class="header__list">
-        <li class="header__item ">
-          <p class="header__link header__log">log in</p>
+        <li class="header__item header__register">
+          <p class="header__link ">register</p>
+        </li>
+          <li class="header__item header__log">
+          <p class="header__link">log in</p>
         </li>
         <li class="header__item">
           <a class="header__link" href="/src/index.html">home</a>
@@ -18,9 +21,29 @@
         </li>
       </ul>
   </div>
-  <form class="login__form" id="login-form">
+  <div class=log__btns> 
+  <div class="login__form "id="register-div">
     <input
-    class="login__input"
+      class="login__input"
+      type="email"
+      id="register-email"
+      name="register-email"
+      placeholder="Email"
+      required
+    />
+    <input
+      class="login__input"
+      type="password"
+      id="register-password"
+      name="register-password"
+      placeholder="Password"
+      required
+    />
+    <button class="log__btn" id="register-btn">Register</button>
+  </div>
+  <div class="login__log" id="login-div">
+    <input
+      class="login__input"
       type="email"
       id="login-email"
       name="login-email"
@@ -35,17 +58,17 @@
       placeholder="Password"
       required
     />
-    <div class = "log__btns">
-      <button class="log__btn" id="log-btn">Log in</button>
-      <button class="log__btn" id="register-btn">Register</button>
-      </div>
-  </form>
+    <button class="log__btn" id="log-btn">Log in</button>
+  </div>
+</div>
   <script>
-    const paragraph = document.querySelector(".header__log");
-    const loginForm = document.querySelector(".login__form")
-    paragraph.addEventListener('click', function() {
-    loginForm.style.visibility = 'visible';
-    });
+  const register = document.querySelector(".header__register");
+  const log = document.querySelector(".header__log");
+  const loginForm = document.querySelector(".login__form")
+  const loginLog = document.querySelector(".login__log")
+
+  register.addEventListener('click', () => {loginForm.style.visibility = 'visible'});
+  log.addEventListener('click', () => {loginLog.style.visibility = 'visible'});
   </script>
   
   <!-- <div class="" id="login-div">  
@@ -72,3 +95,49 @@
     <button type="button" class="library-button__status">queue</button>
   </div>
 </header>
+
+
+<!-- <li class="header__item Logo__btns">
+  <p class="header__link header__log">register/</p>
+  <div id="register-div">
+    <button class="Login__btn" id="register-btn">Register</button><br />
+    <input
+      type="email"
+      id="register-email"
+      name="register-email"
+      placeholder="Email"
+      required
+    /><br />
+    <input
+      type="password"
+      id="register-password"
+      name="register-password"
+      placeholder="Password"
+      required
+    />
+  </div> 
+  <p class="header__link header__log">log in</p>
+  <div class="" id="login-div">
+    <button class="login__btn" id="log-btn">Log in</button><br />
+    <input
+      type="email"
+      id="login-email"
+      name="login-email"
+      placeholder="Email"
+      required
+    /><br />
+    <input
+      type="password"
+      id="login-password"
+      name="login-password"
+      placeholder="Password"
+      required
+    /> -->
+
+  <!-- <script>
+const paragraph = document.querySelector(".header__log");
+const loginForm = document.querySelector(".login__form")
+paragraph.addEventListener('click', function() {
+loginForm.style.visibility = 'visible';
+});
+</script> -->
