--- a/src/partials/modal_team.html
+++ b/src/partials/modal_team.html
@@ -1,74 +1,87 @@
 <div class="modal-team__backdrop modal-team__hidden">
   <div class="modal-team">
     <button type="'button" class="modal-team__close">
-      <img width="40" height="14" width="14" src="./images/close-button.svg" />
+      <img width="14" height="14" src="./images/close-button-cart.svg" />
     </button>
     <h2 class="modal-team__header">Zespół grupa nr: 5</h2>
     <div class="team-members">
       <div class="team-member">
-        <img width="200" height="200" src="./images/demo.jpg" alt="" class="team-member__photo" />
-        <h3 class="team-member__name">Imię Nazwisko</h3>
+        <img width="200" height="200" src="./images/img-team/Michał-Mazur.jpg" alt="Michał Mazur" class="team-member__photo"
+             srcset="./images/img-team/Michał-Mazur.jpg 1x, ./images/img-team/Michał-Mazur@2.jpg 2x" />
+        <h3 class="team-member__name">Michał Mazur</h3>
+        <h4 class="team-member__function">Team Leader</h4>
         <p class="team-member__description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem recusandae?
           Numquam magni libero nihil officiis!
         </p>
       </div>
       <div class="team-member">
-        <img width="200" height="200" src="./images/demo.jpg" alt="" class="team-member__photo" />
-        <h3 class="team-member__name">Imię Nazwisko</h3>
+        <img width="200" height="200" src="./images/img-team/Mateusz-Trepkowski.jpg" alt="Mateusz Trepkowski" class="team-member__photo"
+             srcset="./images/img-team/Mateusz-Trepkowski.jpg 1x, ./images/img-team/Mateusz-Trepkowski@2.jpg 2x" />
+        <h3 class="team-member__name">Mateusz Trepkowski</h3>
+        <h4 class="team-member__function">Scrum Master</h4>
+        <p class="team-member__description">
+          Mieszka w Gdańsku, lubi słuchać muzyki i oglądać filmy. Interesuje się lotnictwem, operą oraz teatrem.
+        </p>
+      </div>
+      <div class="team-member">
+        <img width="200" height="200" src="./images/img-team/Beata-Hryniewicka.jpg" alt="Beata Hryniewicka" class="team-member__photo"
+             srcset="./images/img-team/Beata-Hryniewicka.jpg 1x, ./images/img-team/Beata-Hryniewicka@2.jpg 2x" />
+        <h3 class="team-member__name">Beata Hryniewicka</h3>
+        <p class="team-member__description">
+          Mieszka w Lublinie. Zajmuje się nieruchomościami oraz prawem. W wolnym czasie lubi biegać, 
+          oraz kosztować orientalne jedzenie. Ceni sobie szczerość, prywatnie żona i matka w jednym.
+        </p>
+      </div>
+      <div class="team-member">
+        <img width="200" height="200" src="./images/img-team/Tatsiana-Rudava.jpg" alt="Tatsiana Rudava" class="team-member__photo"
+             srcset="./images/img-team/Tatsiana-Rudava.jpg 1x, ./images/img-team/Tatsiana-Rudava@2.jpg 2x" />
+        <h3 class="team-member__name">Tatsiana Rudava</h3>
+        <p class="team-member__description">
+          Mieszka w Warszawie. Miłośniczka przygód, filmów, książek, geografii oraz gotowania. 
+          Swoją ścieżkę kariery rozpoczęła na prawie, a obecnie jest na dobrej drodze do zostania programistką.
+        </p>
+      </div>
+      <div class="team-member">
+        <img width="200" height="200" src="./images/img-team/Michał-Poniatowski.jpg" alt="Michał Poniatowski" class="team-member__photo"
+             srcset="./images/img-team/Michał-Poniatowski.jpg 1x, ./images/img-team/Michał-Poniatowski@2.jpg 2x"/>
+        <h3 class="team-member__name">Michał "Poniat" Poniatowski</h3>
+        <p class="team-member__description">
+          Mieszka we Wrocławiu. Interesuje się kitesurfing'em, narciarstwem(skitur oraz freeride) oraz kolarstwem. 
+          W wolnych chwilach lubi także pomajsterkować oraz poskładać kilka custom'owych rowerów, 
+          a po tym wszystkim obejrzeć dobry film.  
+        </p>
+      </div>
+      <div class="team-member">
+        <img width="200" height="200" src="./images/img-team/Bartłomiej-Poprawa.jpg" alt="Bartłomiej Poprawa" class="team-member__photo"
+             srcset="./images/img-team/Bartłomiej-Poprawa.jpg 1x, ./images/img-team/Bartłomiej-Poprawa@2.jpg 2x" />
+        <h3 class="team-member__name">Bartłomiej Poprawa</h3>
         <p class="team-member__description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem recusandae?
           Numquam magni libero nihil officiis!
         </p>
       </div>
       <div class="team-member">
-        <img width="200" height="200" src="./images/demo.jpg" alt="" class="team-member__photo" />
-        <h3 class="team-member__name">Imię Nazwisko</h3>
+        <img width="200" height="200" src="./images/img-team/Roland-Dąbrowski.jpg" alt="Roland Dąbrowski" class="team-member__photo"
+             srcset="./images/img-team/Roland-Dąbrowski.jpg 1x, ./images/img-team/Roland-Dąbrowski@2.jpg 2x" />
+        <h3 class="team-member__name">Roland Dąbrowski</h3>
         <p class="team-member__description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem recusandae?
           Numquam magni libero nihil officiis!
         </p>
       </div>
       <div class="team-member">
-        <img width="200" height="200" src="./images/demo.jpg" alt="" class="team-member__photo" />
-        <h3 class="team-member__name">Imię Nazwisko</h3>
+        <img width="200" height="200" src="./images/img-team/Adrian-Lacheta.jpg" alt="Adrian Lacheta" class="team-member__photo"
+             srcset="./images/img-team/Adrian-Lacheta.jpg 1x, ./images/img-team/Adrian-Lacheta@2.jpg 2x" />
+        <h3 class="team-member__name">Adrian Lacheta</h3>
         <p class="team-member__description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem recusandae?
-          Numquam magni libero nihil officiis!
-        </p>
-      </div>
-      <div class="team-member">
-        <img width="200" height="200" src="./images/demo.jpg" alt="" class="team-member__photo" />
-        <h3 class="team-member__name">Imię Nazwisko</h3>
-        <p class="team-member__description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem recusandae?
-          Numquam magni libero nihil officiis!
-        </p>
-      </div>
-      <div class="team-member">
-        <img width="200" height="200" src="./images/demo.jpg" alt="" class="team-member__photo" />
-        <h3 class="team-member__name">Imię Nazwisko</h3>
-        <p class="team-member__description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem recusandae?
-          Numquam magni libero nihil officiis!
-        </p>
-      </div>
-      <div class="team-member">
-        <img width="200" height="200" src="./images/demo.jpg" alt="" class="team-member__photo" />
-        <h3 class="team-member__name">Imię Nazwisko</h3>
-        <p class="team-member__description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem recusandae?
-          Numquam magni libero nihil officiis!
-        </p>
-      </div>
-      <div class="team-member">
-        <img width="200" height="200" src="./images/demo.jpg" alt="" class="team-member__photo" />
-        <h3 class="team-member__name">Imię Nazwisko</h3>
-        <p class="team-member__description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem recusandae?
-          Numquam magni libero nihil officiis!
+          Pochodzi z Rybnika. Pracuje jako programista CNC, główne zainteresowania to maratony, mtb, narty
+           oraz air soft gun. 
         </p>
       </div>
     </div>
+    <button type="'button" id="modal-team__btn-scroll" class="modal-team__scroll">
+      <img width="14" height="14" src="./images/scroll-modal-team.svg" />
+    </button>
   </div>
 </div>
