--- a/src/sass/partials/_modal_team.scss
+++ b/src/sass/partials/_modal_team.scss
@@ -38,8 +38,8 @@
   }
   &__close {
     position: absolute;
-    top: 16px;
-    right: 16px;
+    top: 30px;
+    right: 40px;
     border: none;
     padding: 0;
     background-color: transparent;
@@ -52,9 +52,53 @@
       transform: scale(1.5);
     }
   }
+  &__scroll {
+    position: absolute;
+    right: 40px;
+    // bottom: 20px;
+    border: none;
+    padding: 0;
+    background-color: transparent;
+    height: 14px;
+    font-size: 0;
+    scale: 2;
+    cursor: pointer;
+    transition: transform 0.25s ease-out;
+    &:hover {
+      transform: scale(1.5);
+    }
+    @include desktop {
+      display: none;
+    }
+  }
   &__header {
     text-align: center;
     margin-top: 0;
+    margin-bottom: 40px;
+    // border-bottom: 1px solid rgb(192, 192, 192);
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 80%;
+      height: 2px;
+      background-color: rgb(192, 192, 192);
+      left: 50%;
+      top: 40px;
+      transform: translate(-50%, -50%);
+      // display: flex;
+
+
+      @include desktop {
+        top: 50px;
+        // display: none;
+      }
+    }
+    @include desktop {
+      margin: 30px 0 60px 0;
+      // margin-top: 30px;
+    }
   }
 }
 .team-members {
@@ -70,13 +114,17 @@
 }
 
 .team-member {
+  font-family: $defaultFontSize;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 300px;
   padding: 0 5px;
   border-bottom: 1px solid rgb(192, 192, 192);
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+  // @include tablet {
+  //   border-bottom-width: 80%;
+  // }
   @include desktop {
     border-bottom: none;
     margin-bottom: 0;
@@ -93,6 +141,8 @@
   }
 
   &__description {
+    max-width: 80%;
+    margin-bottom: 20px;
     margin-top: 0;
     text-align: center;
      @include desktop {
@@ -100,6 +150,7 @@
     }
   }
   &__photo {
+    margin-bottom: 10px;
     transition: transform 0.25s ease-out;
     &:hover {
       transform: scale(1.05);
@@ -113,10 +164,19 @@
     }
   }
   &__name {
+    margin-bottom: 5px;
     @include desktop {
     border-bottom: 1px solid rgb(192, 192, 192);
     padding: 15px 0 5px 0;
     margin: 0;
+    }
+  }
+  &__function {
+    margin-bottom: 5px;
+    font-style: italic;
+    font-weight: 500;
+    @include desktop {
+      margin-top: 5px;
     }
   }
 }
