video modal almost ready, loader fixes done

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -5,7 +5,9 @@
     </button>
     <div class="modal__container">
       <div class="modal__poster-container">
-        <img class="modal__poster" src="./images/rectangle.jpg" alt="Film poster" />
+        <a class="modal__trailer"
+          ><img class="modal__poster" src="./images/rectangle.jpg" alt="Film poster"
+        /></a>
       </div>
       <div class="modal__movie-info">
         <h2 class="modal__title">A FISTFUL OF LEAD</h2>
