--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,3 +16,4 @@
 @import './partials/modal';
 @import './partials/modal_team';
 @import './partials/loader';
+@import './partials/modal_video.scss';
