--- a/src/sass/partials/_loader.scss
+++ b/src/sass/partials/_loader.scss
@@ -4,19 +4,26 @@
   position: absolute;
   top: 0;
   left: 0;
+  bottom: 0;
+  right: 0;
   background-color: #54545490;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
 }
 
-$colors: hsla(337, 84, 48, 0.75) hsla(160, 50, 48, 0.75) hsla(190, 61, 65, 0.75)
-  hsla(41, 82, 52, 0.75);
+// $colors: hsla(337, 84, 48, 0.75) hsla(160, 50, 48, 0.75) hsla(190, 61, 65, 0.75)
+//   hsla(41, 82, 52, 0.75);
+$color1: hsla(337, 84, 48, 0.75);
+$color2: hsla(160, 50, 48, 0.75);
+$color3: hsla(190, 61, 65, 0.75);
+$color4: hsla(41, 82, 52, 0.75);
+
 $size: 2.5em;
 $thickness: 0.5em;
 
 // Calculated variables.
-$lat: ($size - $thickness) / 2;
+$lat: calc(($size - $thickness) / 2);
 $offset: $lat - $thickness;
 
 .loader {
@@ -34,7 +41,7 @@ $offset: $lat - $thickness;
     display: block;
     width: $thickness;
     height: $thickness;
-    border-radius: $thickness / 2;
+    border-radius: calc($thickness / 2);
     transform: translate(-50%, -50%);
   }
 
@@ -50,36 +57,36 @@ $offset: $lat - $thickness;
 @keyframes before {
   0% {
     width: $thickness;
-    box-shadow: $lat (-$offset) nth($colors, 1), (-$lat) $offset nth($colors, 3);
+    box-shadow: $lat (-$offset) $color1, (-$lat) $offset $color3;
   }
   35% {
     width: $size;
-    box-shadow: 0 (-$offset) nth($colors, 1), 0 $offset nth($colors, 3);
+    box-shadow: 0 (-$offset) $color1, 0 $offset $color3;
   }
   70% {
     width: $thickness;
-    box-shadow: (-$lat) (-$offset) nth($colors, 1), $lat $offset nth($colors, 3);
+    box-shadow: (-$lat) (-$offset) $color1, $lat $offset $color3;
   }
   100% {
-    box-shadow: $lat (-$offset) nth($colors, 1), (-$lat) $offset nth($colors, 3);
+    box-shadow: $lat (-$offset) $color1, (-$lat) $offset $color3;
   }
 }
 
 @keyframes after {
   0% {
     height: $thickness;
-    box-shadow: $offset $lat nth($colors, 2), (-$offset) (-$lat) nth($colors, 4);
+    box-shadow: $offset $lat $color2, (-$offset) (-$lat) $color4;
   }
   35% {
     height: $size;
-    box-shadow: $offset 0 nth($colors, 2), (-$offset) 0 nth($colors, 4);
+    box-shadow: $offset 0 $color2, (-$offset) 0 $color4;
   }
   70% {
     height: $thickness;
-    box-shadow: $offset (-$lat) nth($colors, 2), (-$offset) $lat nth($colors, 4);
+    box-shadow: $offset (-$lat) $color2, (-$offset) $lat $color4;
   }
   100% {
-    box-shadow: $offset $lat nth($colors, 2), (-$offset) (-$lat) nth($colors, 4);
+    box-shadow: $offset $lat $color2, (-$offset) (-$lat) $color4;
   }
 }
 
@@ -87,8 +94,8 @@ $offset: $lat - $thickness;
  * Attempt to center the whole thing!
  */
 
-// .loader {
-//   position: absolute;
-//   top: calc(50% - #{$size / 2});
-//   left: calc(50% - #{$size / 2});
-// }
+.loader {
+  position: absolute;
+  top: calc(50% - ($size / 2));
+  left: calc(50% - ($size / 2));
+}
