--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -1,59 +1,75 @@
-<header class="header">
-  <div class="header__container">
-    <a class="header__logo" href="/src/index.html">
-      <svg class="header__icon" width="24" height="24">
-        <use href="/src/images/icons.svg#icon-movie"></use>
-      </svg>
-      <p class="header__title">Filmoteka</p>
-    </a>
-    <ul class="header__list">
-      <li>
-        <div class=" "id="register-div">
-          <button class="login__btn" id="register-btn">Register</button><br />
-          <input
-            type="email"
-            id="register-email"
-            name="register-email"
-            placeholder="Email"
-            required
-          />
-          <input
-            type="password"
-            id="register-password"
-            name="register-password"
-            placeholder="Password"
-            required
-          />
+  <header class="header">
+    <div class="header__container">
+      <a class="header__logo" href="/src/index.html">
+        <svg class="header__icon" width="24" height="24">
+          <use href="/src/images/icons.svg#icon-movie"></use>
+        </svg>
+        <p class="header__title">Filmoteka</p>
+      </a>
+      <ul class="header__list"> <div class=layout__form> 
+          <li class="header__item header__register">
+            <p class="header__link ">register</p>
+          </li>
+            <li class="header__item header__log">
+            <p class="header__link">log in</p>
+          </li>
+          <li class="header__item">
+            <a class="header__link header__link--active" href="/src/index.html">home</a>
+          </li>
+          <li class="header__item">
+            <a class="header__link " href="/src/library.html">my Library</a>
+          </li>
+          <div class="login__form "id="register-div">
+            <input
+              class="login__input"
+              type="email"
+              id="register-email"
+              name="register-email"
+              placeholder="Email"
+              required
+            />
+            <input
+              class="login__input"
+              type="password"
+              id="register-password"
+              name="register-password"
+              placeholder="Password"
+              required
+            />
+            <button class="login__btn" id="register-btn">Register</button>
+          </div>
+          <div class="login__log" id="login-div">
+            <input
+              class="login__input"
+              type="email"
+              id="login-email"
+              name="login-email"
+              placeholder="Email"
+              required
+            />
+            <input
+            class="login__input"
+              type="password"
+              id="login-password"
+              name="login-password"
+              placeholder="Password"
+              required
+            />
+            <button class="login__btn" id="log-btn">Log in</button>
+          </div>
         </div>
-      </li>
-      <li>
-        <div class="" id="login-div">
-          <button class="login__btn" id="log-btn">Log in</button><br />
-          <input
-            type="email"
-            id="login-email"
-            name="login-email"
-            placeholder="Email"
-            required
-          />
-          <input
-            type="password"
-            id="login-password"
-            name="login-password"
-            placeholder="Password"
-            required
-          />
-        </div>
-      </li>
+        </ul>
+    </div>
+    <script>
+    const register = document.querySelector(".header__register");
+    const log = document.querySelector(".header__log");
+    const loginForm = document.querySelector(".login__form")
+    const loginLog = document.querySelector(".login__log")
   
-      <li class="header__item">
-        <a class="header__link header__link--active" href="/src/index.html"> Home </a>
-      </li>
-      <li class="header__item">
-        <a class="header__link" href="/src/library.html">My Library</a>
-      </li>
-    </ul>
-  </div>
+    register.addEventListener('click', () => {loginForm.style.visibility = 'visible'});
+    log.addEventListener('click', () => {loginLog.style.visibility = 'visible'});
+    </script>
+
   <form class="form" id="form-search">
     <input
       class="form__input"
