--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -6,7 +6,7 @@
       </svg>
       <p class="header__title">Filmoteka</p>
     </a>
-    <ul class="header__list">
+    <ul class="header__list"> <div class=layout__form> 
         <li class="header__item header__register">
           <p class="header__link ">register</p>
         </li>
@@ -19,48 +19,47 @@
         <li class="header__item">
           <a class="header__link header__link--active" href="/src/library.html">my Library</a>
         </li>
+        <div class="login__form "id="register-div">
+          <input
+            class="login__input"
+            type="email"
+            id="register-email"
+            name="register-email"
+            placeholder="Email"
+            required
+          />
+          <input
+            class="login__input"
+            type="password"
+            id="register-password"
+            name="register-password"
+            placeholder="Password"
+            required
+          />
+          <button class="login__btn" id="register-btn">Register</button>
+        </div>
+        <div class="login__log" id="login-div">
+          <input
+            class="login__input"
+            type="email"
+            id="login-email"
+            name="login-email"
+            placeholder="Email"
+            required
+          />
+          <input
+          class="login__input"
+            type="password"
+            id="login-password"
+            name="login-password"
+            placeholder="Password"
+            required
+          />
+          <button class="login__btn" id="log-btn">Log in</button>
+        </div>
+      </div>
       </ul>
   </div>
-  <div class=log__btns> 
-  <div class="login__form "id="register-div">
-    <input
-      class="login__input"
-      type="email"
-      id="register-email"
-      name="register-email"
-      placeholder="Email"
-      required
-    />
-    <input
-      class="login__input"
-      type="password"
-      id="register-password"
-      name="register-password"
-      placeholder="Password"
-      required
-    />
-    <button class="log__btn" id="register-btn">Register</button>
-  </div>
-  <div class="login__log" id="login-div">
-    <input
-      class="login__input"
-      type="email"
-      id="login-email"
-      name="login-email"
-      placeholder="Email"
-      required
-    />
-    <input
-    class="login__input"
-      type="password"
-      id="login-password"
-      name="login-password"
-      placeholder="Password"
-      required
-    />
-    <button class="log__btn" id="log-btn">Log in</button>
-  </div>
-</div>
   <script>
   const register = document.querySelector(".header__register");
   const log = document.querySelector(".header__log");
