--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -8,10 +8,10 @@
     </a>
     <ul class="header__list"> <div class=layout__form> 
         <li class="header__item header__register">
-          <p class="header__link ">register</p>
+          <p class="header__link" id="register">register</p>
         </li>
           <li class="header__item header__log">
-          <p class="header__link">log in</p>
+          <p class="header__link" id="log-in">log in</p>
         </li>
         <li class="header__item">
           <a class="header__link" href="/src/index.html">home</a>
@@ -63,11 +63,31 @@
   <script>
   const register = document.querySelector(".header__register");
   const log = document.querySelector(".header__log");
-  const loginForm = document.querySelector(".login__form")
-  const loginLog = document.querySelector(".login__log")
+  const loginForm = document.querySelector(".login__form");
+  const loginLog = document.querySelector(".login__log");
+  const registerLink = document.getElementById('register');
+  const logInLink = document.getElementById('log-in');
 
-  register.addEventListener('click', () => {loginForm.style.visibility = 'visible'});
-  log.addEventListener('click', () => {loginLog.style.visibility = 'visible'});
+  register.addEventListener('click', () => {
+    loginForm.style.visibility = 'visible';
+    registerLink.style.color = 'red'
+    
+    if (loginForm.style.visibility === 'visible'){
+      loginLog.style = 'hidden';
+      logInLink.style.color = 'white'}
+      else {loginLog.style.visibility = 'visible'}
+});
+
+  log.addEventListener('click', () => {
+    loginLog.style.visibility = 'visible';
+    logInLink.style.color = 'red';
+
+  if (loginLog.style.visibility === 'visible'){
+    loginForm.style = 'hidden';
+    registerLink.style.color = 'white'
+  }
+    else {loginForm.style.visibility = 'visible';}
+});
   </script>
   
    <div class="library-button">
@@ -75,49 +95,3 @@
     <button type="button" class="library-button__status">queue</button>
   </div>
 </header>
-
-
-<!-- <li class="header__item Logo__btns">
-  <p class="header__link header__log">register/</p>
-  <div id="register-div">
-    <button class="Login__btn" id="register-btn">Register</button><br />
-    <input
-      type="email"
-      id="register-email"
-      name="register-email"
-      placeholder="Email"
-      required
-    /><br />
-    <input
-      type="password"
-      id="register-password"
-      name="register-password"
-      placeholder="Password"
-      required
-    />
-  </div> 
-  <p class="header__link header__log">log in</p>
-  <div class="" id="login-div">
-    <button class="login__btn" id="log-btn">Log in</button><br />
-    <input
-      type="email"
-      id="login-email"
-      name="login-email"
-      placeholder="Email"
-      required
-    /><br />
-    <input
-      type="password"
-      id="login-password"
-      name="login-password"
-      placeholder="Password"
-      required
-    /> -->
-
-  <!-- <script>
-const paragraph = document.querySelector(".header__log");
-const loginForm = document.querySelector(".login__form")
-paragraph.addEventListener('click', function() {
-loginForm.style.visibility = 'visible';
-});
-</script> -->
