Revert "New modal logic"

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -5,9 +5,7 @@
     </button>
     <div class="modal__container">
       <div class="modal__poster-container">
-        <a class="modal__trailer"
-          ><img class="modal__poster" src="./images/rectangle.jpg" alt="Film poster"
-        /></a>
+        <img class="modal__poster" src="./images/rectangle.jpg" alt="Film poster" />
       </div>
       <div class="modal__movie-info">
         <h2 class="modal__title">A FISTFUL OF LEAD</h2>
