Pagination in progress, don't merge files from header

--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -2,15 +2,15 @@
   <button id="previous" class="pagination__button--arrow">
     <img src="./images/icons-pagination/arrow-left.svg" />
   </button>
-  <button id="first" class="pagination__button--hidden-on-mobile" data-page="1"></button>
-  <div id="dot" class="pagination__button--hidden-on-mobile" data-page="">...</div>
-  <button id="minus2" class="pagination__button" data-page=""></button>
-  <button id="minus1" class="pagination__button" data-page=""></button>
-  <button id="current" class="pagination__button--active" data-page=""></button>
-  <button id="plus1" class="pagination__button" data-page=""></button>
-  <button id="plus2" class="pagination__button" data-page=""></button>
-  <div id="dot2" class="pagination__button--hidden-on-mobile" data-page="">...</div>
-  <button id="last" class="pagination__button--hidden-on-mobile" data-page=""></button>
+  <button id="first" class="pagination__button--hidden-on-mobile"></button>
+  <div id="dot" class="pagination__button--hidden-on-mobile">...</div>
+  <button id="minus2" class="pagination__button"></button>
+  <button id="minus1" class="pagination__button"></button>
+  <button id="current" class="pagination__button--active"></button>
+  <button id="plus1" class="pagination__button"></button>
+  <button id="plus2" class="pagination__button"></button>
+  <div id="dot2" class="pagination__button--hidden-on-mobile">...</div>
+  <button id="last" class="pagination__button--hidden-on-mobile"></button>
   <button id="next" class="pagination__button--arrow">
     <img src="./images/icons-pagination/arrow-right.svg" />
   </button>
