--- a/src/partials/modal_team.html
+++ b/src/partials/modal_team.html
@@ -4,8 +4,11 @@
       <img width="14" height="14" src="./images/close-button-film.svg" />
     </button>
     <div class="modal-team__head-div">
-      <img width="50" height="50" src="./images/demo.jpg" alt="logo" class="modal-team__head-img"/>
-      <h2 class="modal-team__header">Zespół grupa nr: 5</h2>
+      <img width="100" height="" src="./images/icon-logo-no-color-mid.svg" alt="logo" class="modal-team__head-img"/>
+      <div class="modal-team__head-title">
+        <h2 class="modal-team__header">Popcorn Eaters</h2>
+        <h3 class="modal-team__header-add">goit js group</h3>
+      </div>
     </div>
     <!-- <h2 class="modal-team__header">Zespół grupa nr: 5</h2> -->
     <div class="team-members">
@@ -61,8 +64,8 @@
              srcset="./images/img-team/bartłomiej-poprawa.jpg 1x, ./images/img-team/bartłomiej-poprawa@2.jpg 2x" />
         <h3 class="team-member__name">Bartłomiej Poprawa</h3>
         <p class="team-member__description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem recusandae?
-          Numquam magni libero nihil officiis!
+          Pochodzi z Gliwic. W wolnym czasie zajmuje się programowaniem i graniem na gitarze. 
+          W weekendy studiuje lub wyjeżdża w podróże.
         </p>
       </div>
       <div class="team-member">
