Looks fine - I gues

--- a/src/partials/paginationlibrary.html
+++ b/src/partials/paginationlibrary.html
@@ -1,4 +1,4 @@
-<section class="pagination">
+<section class="pagination is-hidden">
   <button id="previousLibrary" class="pagination__button--arrow">
     <img src="./images/icons-pagination/arrow-left.svg" />
   </button>
