--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -161,7 +161,7 @@
         font-size: $smallFontSize;
         line-height: $defaultLineHeight;
         font-style: italic;
-        text-align: center;
+        text-align: left;
       }
   }
 
