--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -27,7 +27,8 @@
             type="email"
             id="login-email"
             name="login-email"
-            placeholder="Email"
+            placeholder="E-mail"
+            autocomplete="off"
             required
           />
           <input
@@ -36,12 +37,14 @@
             id="login-password"
             name="login-password"
             placeholder="Password"
+            autocomplete="off"
             required
           />
         </form>
 
-        <button class="login__btn" id="log-btn">Log in</button>
-        <button class="login__btn" id="register-btn">Register</button>
+        <button class="login__btn" id="log-btn">log in</button>
+        <button class="login__btn" id="register-btn">register</button>
+        
   
       </div>
     </div>
