--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -41,11 +41,9 @@
             required
           />
         </form>
-
         <button class="login__btn" id="log-btn">log in</button>
         <button class="login__btn" id="register-btn">register</button>
-        
-  
+        <p class="header__link logged">logged in</p>
       </div>
     </div>
   </div>
