--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -26,7 +26,8 @@
             type="email"
             id="login-email"
             name="login-email"
-            placeholder="Email"
+            placeholder="E-mail"
+            autocomplete="off"
             required
           />
           <input
@@ -35,13 +36,14 @@
             id="login-password"
             name="login-password"
             placeholder="Password"
+            autocomplete="off"
             required
           />
         </form>
 
         <button class="login__btn" id="log-btn">Log in</button>
         <button class="login__btn" id="register-btn">Register</button>
-  
+        <p class="header__link logged">logged in</p>
       </div>
     </div>
   </div>
