--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -188,6 +188,15 @@
       background-color: $descritiopnColor;
     }
   }
+
+  .logged {
+     visibility: hidden;
+     top: -35px;
+     left: 210px;
+     position: absolute;
+     font-size:0.5rem;
+    }
+
   .button {
     display: flex;
     align-items: center;
